--- a/style/home.css
+++ b/style/home.css
@@ -1,3 +1,53 @@
+.custom-cursor {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #000;
+  pointer-events: none;
+  z-index: 9999;
+  animation: spin 2s infinite linear;
+}
+
+.custom-cursor::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #fff;
+  animation: pulse 2s infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    background-color: #fff;
+  }
+  50% {
+    background-color: #0099ff; /* Change to your desired color */
+  }
+  100% {
+    background-color: #fff;
+  }
+}
+
+
+
+
 /* responsive section */
 @media (max-width: 767px) {
 
