--- a/style/home.css
+++ b/style/home.css
@@ -2,9 +2,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  border-radius: 20%;
   background-color: #000;
   pointer-events: none;
   z-index: 9999;
@@ -12,16 +12,16 @@
 }
 
 .custom-cursor::before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: #fff;
-  animation: pulse 2s infinite;
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 12px;
+      height: 12px;
+      border-radius: 20%;
+      background-color: #fff;
+      animation: pulse 2s infinite;
 }
 
 @keyframes spin {
@@ -41,7 +41,7 @@
     background-color: #0099ff; /* Change to your desired color */
   }
   100% {
-    background-color: #fff;
+    background-color: #ffffff;
   }
 }
 
